# controller/chat_controller.go
@@ -438,49 +438,14 @@ func (cc *ChatController) GetAllChatRooms(ctx *gin.Context) {
 		return
 	}
 
-	// Get all chat rooms
 	chatRooms, err := cc.ChatService.GetAllChatRooms(data.UserID)
 	if err != nil {
-		response := helper.ErrorResponseWithMessage(
+		helper.GinResponse(ctx, 500, helper.ErrorResponseWithMessage(
 			err,
 			"Failed to get chat rooms",
 			"Không thể lấy danh sách chat rooms",
-		)
-		helper.GinResponse(ctx, 500, response)
+		))
 		return
-	}
-
-	userInfos := make([]schemas.UserInfo, len(chatRooms))
-	for i, room := range chatRooms {
-		// Get receiver info
-		// Check who is the receiver
-		var receiverID uuid.UUID
-		if room.User1ID == data.UserID {
-			receiverID = room.User2ID
-		} else {
-			receiverID = room.User1ID
-		}
-		receiver, err := cc.UserService.GetUserByID(receiverID) // Make sure to get the receiver info
-		if err != nil {
-			response := helper.ErrorResponseWithMessage(
-				err,
-				"Failed to get receiver info",
-				"Không thể lấy thông tin người nhận",
-			)
-			helper.GinResponse(ctx, 500, response)
-			return
-		}
-
-		userInfos[i] = schemas.UserInfo{
-			ID:            receiver.ID,
-			FullName:      receiver.FullName,
-			PhoneNumber:   receiver.PhoneNumber,
-			Gender:        receiver.Gender,
-			AvatarURL:     receiver.AvatarURL,
-			IsMomoLinked:  receiver.IsMomoLinked,
-			BalanceInApp:  receiver.BalanceInApp,
-			AverageRating: receiver.AverageRating,
-		}
 	}
 
 	res := schemas.GetAllChatRoomsResponse{
@@ -488,21 +453,44 @@ func (cc *ChatController) GetAllChatRooms(ctx *gin.Context) {
 	}
 
 	for i, room := range chatRooms {
+		receiverID := room.User2ID
+		if room.User1ID != data.UserID {
+			receiverID = room.User1ID
+		}
+
+		receiver, err := cc.UserService.GetUserByID(receiverID)
+		if err != nil {
+			helper.GinResponse(ctx, 500, helper.ErrorResponseWithMessage(
+				err,
+				"Failed to get receiver info",
+				"Không thể lấy thông tin người nhận",
+			))
+			return
+		}
+
 		res.ChatRooms[i] = schemas.ChatRoomResponse{
-			ID:            room.ID,
-			ReceiverInfo:  userInfos[i],
+			ID: room.ID,
+			ReceiverInfo: schemas.UserInfo{
+				ID:            receiver.ID,
+				FullName:      receiver.FullName,
+				PhoneNumber:   receiver.PhoneNumber,
+				Gender:        receiver.Gender,
+				AvatarURL:     receiver.AvatarURL,
+				IsMomoLinked:  receiver.IsMomoLinked,
+				BalanceInApp:  receiver.BalanceInApp,
+				AverageRating: receiver.AverageRating,
+			},
 			LastMessage:   room.LastMessageText,
 			LastMessageAt: room.LastMessageAt,
 			LastMessageID: room.LastMessageID,
 		}
 	}
 
-	response := helper.SuccessResponse(
+	helper.GinResponse(ctx, 200, helper.SuccessResponse(
 		res,
 		"Chat rooms fetched successfully",
 		"Danh sách chat rooms đã được lấy thành công",
-	)
-	helper.GinResponse(ctx, 200, response)
+	))
 }
 
 // GetChatMessages gets all messages of a chat room
@@ -959,4 +947,79 @@ func (cc *ChatController) UpdateCallStatus(ctx *gin.Context) {
 		"Trạng thái cuộc gọi đã được cập nhật thành công",
 	)
 	helper.GinResponse(ctx, 200, response)
+}
+
+// SearchUsers searches for users by full name (case-insensitive) that have matched with user
+// SearchUsers godoc
+// @Summary Search for users by full name (case-insensitive) that have matched with user
+// @Description Search for users by full name (case-insensitive) that have matched with user
+// @Tags chat
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Param request body schemas.SearchUsersRequest true "Search users request"
+// @Success 200 {object} helper.Response{data=schemas.SearchUsersResponse} "Users fetched successfully"
+// @Failure 400 {object} helper.Response "Invalid request"
+// @Failure 500 {object} helper.Response "Internal server error"
+// @Router /chat/search-users [post]
+func (cc *ChatController) SearchUsers(ctx *gin.Context) {
+	payload := ctx.MustGet((middleware.AuthorizationPayloadKey))
+	data, err := helper.ConvertToPayload(payload)
+	if err != nil {
+		helper.GinResponse(ctx, 500, helper.ErrorResponseWithMessage(err, "Failed to convert payload", "Không thể chuyển đổi payload"))
+		return
+	}
+
+	var req schemas.SearchUsersRequest
+	if err := ctx.ShouldBindJSON(&req); err != nil {
+		helper.GinResponse(ctx, 400, helper.ErrorResponseWithMessage(err, "Failed to bind JSON", "Không thể bind JSON"))
+		return
+	}
+
+	if err := cc.validate.Struct(req); err != nil {
+		helper.GinResponse(ctx, 400, helper.ErrorResponseWithMessage(err, "Failed to validate request", "Không thể validate request"))
+		return
+	}
+
+	chatrooms, err := cc.ChatService.SearchUsers(req, data.UserID)
+	if err != nil {
+		helper.GinResponse(ctx, 500, helper.ErrorResponseWithMessage(err, "Failed to search users", "Không thể tìm kiếm người dùng"))
+		return
+	}
+
+	res := schemas.SearchUsersResponse{
+		ChatRooms: make([]schemas.ChatRoomResponse, len(chatrooms)),
+	}
+
+	for i, room := range chatrooms {
+		receiverID := room.User2ID
+		if room.User1ID != data.UserID {
+			receiverID = room.User1ID
+		}
+
+		receiver, err := cc.UserService.GetUserByID(receiverID)
+		if err != nil {
+			helper.GinResponse(ctx, 500, helper.ErrorResponseWithMessage(err, "Failed to get receiver info", "Không thể lấy thông tin người nhận"))
+			return
+		}
+
+		res.ChatRooms[i] = schemas.ChatRoomResponse{
+			ID: room.ID,
+			ReceiverInfo: schemas.UserInfo{
+				ID:            receiver.ID,
+				FullName:      receiver.FullName,
+				PhoneNumber:   receiver.PhoneNumber,
+				Gender:        receiver.Gender,
+				AvatarURL:     receiver.AvatarURL,
+				IsMomoLinked:  receiver.IsMomoLinked,
+				BalanceInApp:  receiver.BalanceInApp,
+				AverageRating: receiver.AverageRating,
+			},
+			LastMessage:   room.LastMessageText,
+			LastMessageAt: room.LastMessageAt,
+			LastMessageID: room.LastMessageID,
+		}
+	}
+
+	helper.GinResponse(ctx, 200, helper.SuccessResponse(res, "Users fetched successfully", "Người dùng đã được tìm kiếm thành công"))
 }
